--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ backcall==0.2.0
 colorama==0.4.5
 decorator==5.1.1
 Django==4.1.1
+django-decouple==2.1
 django-extensions==3.2.1
 djangorestframework==3.14.0
 executing==1.0.0
